# vcm

./: Cargo.toml  README.md  README_zh.md  vcm-tools.json
.vcm/: .gitignore  config.toml
plans/: development-plan.md  plugin-system-architecture.md  v2.0-development-plan.md
registry/: tools.yaml
src/: cli.rs  i18n.rs  lib.rs  main.rs
src/backends/: brew.rs  cargo.rs  mod.rs  npm.rs  pip.rs
src/commands/: alias.rs  compare.rs  completions.rs  config.rs  default.rs  doctor.rs  export.rs  fallback.rs  free.rs  import.rs  info.rs  init.rs  install.rs  key.rs  lang.rs  list.rs  mod.rs  outdated.rs  project.rs  quota.rs  recommend.rs  remove.rs  run.rs  scan.rs  search.rs  stats.rs  status.rs  update.rs  update_registry.rs  usage.rs
src/core/: config.rs  discovery.rs  mod.rs  registry.rs
src/models/: config.rs  installer.rs  mod.rs  tool.rs
src/utils/: mod.rs  platform.rs  shell.rs
tests/: integration_tests.rs
